...
                                        ),
                                tabs: const [
                                  Tab(
                                    text: 'Sign Up',
                                  ),
                                  Tab(
                                    key: ValueKey('LogInTab_eo8t'),
                                    text: 'Log In',
                                  ),
                                ],
                                controller: _model.tabBarController,
                                onTap: (i) async {
                                  [() async {}, () async {}][i]();
...
                                      Padding(
                                        padding: const EdgeInsetsDirectional.fromSTEB(
                                            0.0, 30.0, 0.0, 0.0),
                                        child: SizedBox(
                                          width: 300.0,
                                          child: TextFormField(
                                            key: const ValueKey('EmailLogin_r6nh'),
                                            controller:
                                                _model.emailLoginTextController,
                                            focusNode:
                                                _model.emailLoginFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                          ),
                                        ),
                                      ),
                                      SizedBox(
                                        width: 300.0,
                                        child: TextFormField(
                                          key: const ValueKey('PasswordLogin_bx0g'),
                                          controller: _model
                                              .passwordLoginTextController,
                                          focusNode:
                                              _model.passwordLoginFocusNode,
                                          autofocus: true,
                                          obscureText:
...
                                        ),
                                      ),
                                      Padding(
                                        padding: const EdgeInsetsDirectional.fromSTEB(
                                            0.0, 150.0, 0.0, 0.0),
                                        child: FFButtonWidget(
                                          key: const ValueKey('LoginButton_t1z9'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'USER_SIGN_UP_PAGE_LoginButton_ON_TAP');
                                            logFirebaseEvent(
                                                'LoginButton_auth');
                                            GoRouter.of(context)
...
