...
                Align(
                  alignment: const AlignmentDirectional(-1.0, 0.0),
                  child: Padding(
                    padding:
                        const EdgeInsetsDirectional.fromSTEB(10.0, 0.0, 0.0, 0.0),
                    child: FlutterFlowIconButton(
                      key: const ValueKey('OpenDrawerButton_xgvb'),
                      borderColor: Colors.transparent,
                      borderRadius: 8.0,
                      buttonSize: 40.0,
                      icon: const Icon(
                        key: ValueKey('OpenDrawerButton_xgvb'),
                        Icons.view_sidebar,
...
